[package]
name = "rhiaqey-common"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
overflow-checks = true
panic = "abort"
codegen-units = 1

[dependencies]
rhiaqey-sdk-rs = { git = "https://github.com/rhiaqey/sdk-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
log = "0.4"
env_logger = "0.11"
rmp-serde = "1.3"
rustis = { version = "0.13", features = ["redis-json", "tokio-runtime"] }
tokio = { version = "1.39", features = ["full", "rt", "rt-multi-thread"] }
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
rand = "0.8"
aes-gcm-siv = { version = "0.11", features = ["std"] }
redis = { version = "0.26", features = ["tokio-comp", "sentinel"] }
axum-core = { version = "0.4" }
hyper = { version = "1.4" }
rusty_ulid = { version = "2.0" }
anyhow = { version = "1.0" }
