[package]
name = "rhiaqey-common"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
overflow-checks = true
panic = "abort"
codegen-units = 1

[dependencies]
rhiaqey-sdk-rs = { git = "https://github.com/rhiaqey/sdk-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
log = "0.4"
rmp-serde = "1.3"
rustis = { version = "0.16", features = ["tokio-runtime"] }
tokio = { version = "1.47", features = ["full", "rt", "rt-multi-thread"] }
rsa = { version = "0.10.0-rc.8" }
sha2 = { version = "0.11.0-rc.2" }
rand = { version = "0.10.0-rc.0" }
aes-gcm-siv = { version = "0.12.0-rc.1", features = ["aes"] }
redis = { version = "0.32", features = ["tokio-comp", "sentinel"] }
rusty_ulid = { version = "2.0" }
anyhow = { version = "1.0" }
